--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "express": "3.4.0",
-    "jade": "*"
+    "jade": "*",
+    "node-cache" : "1.0.0",
+    "underscore" : "1.6.0"
   }
 }
