--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "express": "3.4.0",
     "jade": "*",
     "node-cache" : "1.0.0",
-    "underscore" : "1.6.0"
+    "underscore" : "1.6.0" ,
+    "async" : "*",
+    "request" : "*"
   }
 }
